2010-01-01  Janne Jalkanen <jalkanen@ecyrd.com>

        * Implemented Version labels.

2009-12-26  Janne Jalkanen <jalkanen@ecyrd.com>

        * Minor changes in the versioning code; introduced AbstractVersion
        to catch a bunch of unmodifiable methods.  As versioning is
        still disabled, no version bump here.

2009-12-26  Janne Jalkanen <jalkanen@ecyrd.com>

        * 0.7.0
        
        * Optimized itemExists() by changing RepositoryProvider
        interface to allow checking for Properties too.
        
        * Optimized ChangeStore by allowing filtering by parent
        path as well.  This greatly improves the efficiency of
        listing changes to a Node's children or properties.
        
        * 0.6.7

        * Some additional speedups by removing inefficient code from
        GenericIterator.skip() and SessionProvider.listNodes() and
        switching to a lazy properties iterator.

2009-12-24  Janne Jalkanen <jalkanen@ecyrd.com>

        * 0.6.6
        
        * Added some speedups to ChangeStore, which now uses an internal
        HashMap to find the latest change.  Also, changed the internal
        implementation from LinkedList to ArrayList which speeds up
        iteration performance.  This gives approx four times the speed
        increase to very large remove() and save() operations.
        
        * Speeded up SessionProvider.listNodes(), causing a fairly nice
        boost to JdbcProvider.
        
        * Added dist-install target to build.xml.
        
2009-12-24  Janne Jalkanen <jalkanen@ecyrd.com>

        * 0.6.5
        
        * Fixed an off-by-one problem with SNS reordering; all internal
        unit tests run now too!
        
        * Speeded up NodeImpl.getUUID() in case the UUID didn't exist.
        
        * 0.6.4
        
        * Fixed some more issues with SNS reordering. This version now
        passes the JSR-170 TCK with zero errors or failures.
        
        * Merry Christmas!
